# oss-revenue-calc

./: README.md  pyproject.toml
oss_revenue_calc/: __init__.py  calculator.py  cli.py  fetcher.py  report.py
tests/: __init__.py  test_calculator.py  test_fetcher.py  test_report.py
