[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oss-revenue-calc"
version = "0.1.0"
description = "A CLI tool that calculates theoretical revenue owed to OSS maintainers under the Spotify model for AI coding platforms"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OSS Revenue Calc Contributors" }
]
keywords = ["open-source", "revenue", "ai", "cli", "pypi", "npm", "spotify-model"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "typer[all]>=0.9.0",
  "rich>=13.0.0",
  "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "pytest-httpx>=0.21.0",
]

[project.scripts]
oss-revenue-calc = "oss_revenue_calc.cli:app"

[project.urls]
Homepage = "https://github.com/example/oss-revenue-calc"
Issues = "https://github.com/example/oss-revenue-calc/issues"

[tool.hatch.build.targets.wheel]
packages = ["oss_revenue_calc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py310"
